fdo#53487 SwUndoInsert: take care of fieldmarks when deleting field chars

The problem was that while SwUndoInsert removed the field characters, it
didn't remove the fieldmark, so after unding a comment insert, it wasn't
possible to re-insert a comment.